<resources>
    <string name="app_name">玩Android</string>

    <string name="tab_home">首页</string>
    <string name="tab_question">问答</string>
    <string name="tab_tree">体系</string>
    <string name="tab_me">我的</string>
    <string name="tab_done">完成</string>
    <string name="tab_todo">未完成</string>

    <string name="cancel">取消</string>
    <string name="accept">确定</string>

    <string name="title_todo">TodoList</string>
    <string name="title_setting">设置</string>
    <string name="title_my_coin">我的积分</string>
    <string name="title_integral_rank">积分排行榜</string>
    <string name="title_my_collect">我的收藏</string>
    <string name="title_my_share">我的分享</string>
    <string name="title_project">项目</string>
    <string name="title_about">关于软件</string>
    <string name="title_profile">用户详细</string>
    <string name="title_todo_detail">Todo</string>
    <string name="title_login">登录/注册</string>

    <string name="dialog_title_action">选择操作</string>
    <string name="dialog_title_edit">确定更改</string>
    <string name="dialog_title_commit">确认提交</string>
    <string name="dialog_title_delete">确定删除</string>
    <string name="dialog_title_priority">选择优先级</string>
    <string name="dialog_title_type">选择种类</string>

    <string name="text_new">新</string>
    <string name="text_author">匿名</string>
    <string name="text_top">置顶</string>
    <string name="text_time">刚刚</string>
    <string name="text_error_retry">出错了，点我重试</string>
    <string name="text_empty_retry">什么都没有，点我重试</string>
    <string name="text_search_empty">什么都没有找到，换个关键词试试</string>
    <string name="text_me_login">去登录</string>
    <string name="text_user_info">等级：—&#160;&#160;&#160;排名： —</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="text_go_register">去注册</string>
    <string name="text_go_login">已有帐号，去登陆</string>
    <string name="text_search">搜索</string>
    <string name="text_logout">退出登录</string>
    <string name="text_integral_rank">积分排名</string>
    <string name="text_integral_info"><u>积分规则</u></string>
    <string name="text_add_article">分享文章</string>
    <string name="text_developer">Developer</string>
    <string name="text_contact_me">Contact me</string>
    <string name="text_licenses">Licenses</string>
    <string name="text_choose_time">选择截止时间</string>
    <string name="text_add_detail">添加详细信息</string>
    <string name="text_add_article_title">标题</string>
    <string name="text_add_article_url">链接</string>
    <string name="text_share">分享</string>
    <string name="text_todo_detail_title">Todo标题</string>
    <string name="text_todo_detail_content">Todo内容</string>
    <string name="text_todo_detail_time">预定完成时间</string>
    <string name="text_todo_detail_type">Todo类型</string>
    <string name="text_todo_detail_priority">Todo优先级</string>
    <string name="text_edit">编辑</string>
    <string name="text_delete">删除</string>
    <string name="text_web_error">网络出现了一些问题…</string>
    <string name="text_reload">重新加载</string>

    <string name="text_setting_coin">我的积分</string>
    <string name="text_setting_collect">我的收藏</string>
    <string name="text_setting_share">我的分享</string>
    <string name="text_setting_todo">待办清单</string>
    <string name="text_setting_wanandroid">WanAndroid网站</string>
    <string name="text_setting_project">项目</string>
    <string name="text_setting_about">关于软件</string>
    <string name="text_setting_settings">系统设置</string>

    <string name="hint_login_username">请输入用户名</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="hint_register_password2">请再次输入密码</string>
    <string name="hint_search">输入搜索内容</string>
    <string name="hint_add_todo_title">新建任务</string>
    <string name="hint_add_todo_detail">添加详细信息</string>
    <string name="hint_share_article_title">文章标题（100字以内）</string>
    <string name="hint_share_article_url">文章链接</string>
    <string name="hint_todo_detail_title">Todo标题</string>
    <string name="hint_todo_detail_content">Todo内容</string>
    <string name="hint_todo_detail_tag">Todo类型</string>
    <string name="hint_todo_detail_priority">Todo优先级</string>
    <string name="hint_todo_detail_time">预定完成时间</string>

    <string name="setting_night_mode">夜间模式</string>

    <string name="format_author">分享人：%s</string>
    <string name="format_todo_date">预定完成时间：%s</string>
    <string name="format_todo_priority">Todo优先级：%s</string>
    <string name="format_todo_type">Todo类型：%s</string>

    <string name="string_share_info">1. 只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;\n
2. CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;\n
3. 其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响。</string>

    <string name="title_home">首页</string>

</resources>