<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="me.robbin.wanandroid.ui.fragment.knowledge.viewmodel.ShareArticleViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_primary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarShareArticle"
            addStatusPadding="@{true}"
            tbNavIconClick="@{() -> viewModel.goBack()}"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/bg_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/text_add_article"
            app:titleTextColor="@color/text_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShareTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_add_article_title"
            android:textColor="@color/text_secondary"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarShareArticle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etShareTitle"
            onTextChanged="@{viewModel.titleWatcher}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_edit"
            android:hint="@string/hint_share_article_title"
            android:lines="1"
            android:padding="10dp"
            android:text="@{viewModel.articleTitle}"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvShareTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShareUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_add_article_url"
            android:textColor="@color/text_secondary"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etShareTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etShareUrl"
            onTextChanged="@{viewModel.urlWatcher}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_edit"
            android:gravity="top"
            android:hint="@string/hint_share_article_url"
            android:lines="3"
            android:padding="10dp"
            android:text="@{viewModel.articleUrl}"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvShareUrl" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@{@string/format_author(viewModel.author)}"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etShareUrl" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/bg_button"
            android:text="@string/text_share"
            android:textColor="@color/text_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/string_share_info"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>