<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="me.robbin.wanandroid.ui.fragment.todo.viewmodel.TodoDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_primary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarTodoDetail"
            addStatusPadding="@{true}"
            tbNavIconClick="@{() -> viewModel.goBack()}"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/bg_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/title_todo_detail"
            app:titleTextColor="@color/text_title" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarTodoDetail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTodoDetailTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_add_article_title"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTodoDetailTitle"
                    onTextChanged="@{viewModel.titleWatcher}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_edit"
                    android:hint="@string/hint_todo_detail_title"
                    android:lines="1"
                    android:padding="10dp"
                    android:text="@{viewModel.bean.title}"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTodoDetailTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTodoDetailContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_todo_detail_content"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etTodoDetailTitle" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTodoDetailContent"
                    onTextChanged="@{viewModel.detailWatcher}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_edit"
                    android:gravity="top"
                    android:hint="@string/hint_todo_detail_content"
                    android:lines="3"
                    android:padding="10dp"
                    android:text="@{viewModel.bean.content}"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTodoDetailContent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTodoDetailTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_todo_detail_time"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etTodoDetailContent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTodoDetailTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_edit"
                    android:gravity="top"
                    android:padding="10dp"
                    android:text="@{viewModel.bean.dateStr}"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTodoDetailTime" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTodoDetailType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_todo_detail_type"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnTodoDetailTime" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTodoDetailType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_edit"
                    android:gravity="top"
                    android:padding="10dp"
                    android:text="@{viewModel.bean.whatType}"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTodoDetailType" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTodoDetailPriority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_todo_detail_priority"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnTodoDetailType" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTodoDetailPriority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_edit"
                    android:gravity="top"
                    android:padding="10dp"
                    android:text="@{viewModel.bean.whatPriority}"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTodoDetailPriority" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTodoDetailEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_button"
                    android:padding="10dp"
                    android:text="@string/text_edit"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnTodoDetailPriority" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>