<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="me.robbin.wanandroid.ui.fragment.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgPrimary">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/evLoginUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_login_username"
            android:textColorHint="@color/textSecondary"
            app:hintTextColor="@color/textSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                onTextChanged="@{viewModel.nameWatcher}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:lines="1"
                android:ellipsize="end"
                android:text="@{viewModel.username}"
                android:textColor="@color/textSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/evLoginPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_login_password"
            android:textColorHint="@color/textSecondary"
            app:hintTextColor="@color/textSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/evLoginUsername">

            <com.google.android.material.textfield.TextInputEditText
                onTextChanged="@{viewModel.pwdWatcher}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:ellipsize="end"
                android:lines="1"
                android:text="@{viewModel.pwd}"
                android:textColor="@color/textSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/text_login"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/evLoginPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnGoRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_go_register"
            android:textColor="@color/colorNew"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/ivGoRegister"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGoRegister"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_right_circle"
            app:layout_constraintBottom_toBottomOf="@id/btnGoRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnGoRegister"
            app:layout_constraintTop_toTopOf="@id/btnGoRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>